# Rust-Unix-Shell

./: .gitignore  Cargo.toml  Dockerfile  README.md  note
dummy-files/: assignment3_introSQL.doc
src/: attribute_background.rs  input_redirection.rs  ls.rs  ls_color.rs  ls_tree.rs  main.rs  output.rs  pipe_operator.rs  rev_search.rs  rmallexn.rs  sortbyname.rs  sortbytype.rs  util.rs  validator.rs
test0/: sym-test-110  test-file00  test-file10  test-file20
test1/: sym-test-19  test-file01  test-file11  test-file21
test10/: sym-test-10  test-file010  test-file110  test-file210
test2/: sym-test-18  test-file02  test-file12  test-file22
test2/child-test2/: child-test-file02  sym-test-01
test3/: sym-test-17  test-file03  test-file13  test-file23
test4/: sym-test-16  test-file04  test-file14  test-file24
test4/child-test4/: child-test-file04  sym-test-03
test5/: sym-test-15  test-file05  test-file15  test-file25
test6/: sym-test-14  test-file06  test-file16  test-file26
test7/: sym-test-13  test-file07  test-file17  test-file27
test8/: sym-test-12  test-file08  test-file18  test-file28
test8/child-test8/: child-test-file08  sym-test-07
test9/: sym-test-11  test-file09  test-file19  test-file29
