[package]
name = "rust-unix-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json="0.12.4"
colored = "2.0.0"
chrono = "0.4"
glob = "0.3.0"
walkdir = "2.3.2"
permissions = "0.3.0"
is_executable = "1.0.1"
libc = "0.2.122"
